tests/errors/test_48.x
// No struct members

struct foo -> {}

fn main() -> i64 {}